2015-10-12 belangeo <belangeo@gmail.com>

    * Final revision for version 0.7.7.
    - SHA : 217b0cb40c8b82dad8c66718910fcd6e8f983034

2015-10-11 belangeo <belangeo@gmail.com>

    * Fixed clicks at the end of the Adsr envelope.

2015-09-25 belangeo <belangeo@gmail.com>

    * Added a trigger stream to Looper to signal the beginning of a new loop.

2015-09-15 belangeo <belangeo@gmail.com>

    * Automatically add the current working directory in sys.path when the
      background server is started.

2015-09-03 belangeo <belangeo@gmail.com>

    * Added a pause() method to Linseg and Expseg objects (keep the internal phase).

2015-09-03 belangeo <belangeo@gmail.com>

    * All OSC objects now accept string or unicode types as address parameter.

2015-09-03 belangeo <belangeo@gmail.com>

    * Fixed crash (OSX) when the server GUI is closed with the red button.

2015-09-02 belangeo <belangeo@gmail.com>

    * Fixed crash on server shutdown.

2015-08-25 belangeo <belangeo@gmail.com>

    * Added new objects: MidiListener and OscListener (self-contained MIDI and OSC servers).

-------------------------------------------------------------------------------------

2015-07-27 belangeo <belangeo@gmail.com>

    * Final revision for version 0.7.6.
    - rev 1335

2015-07-24 belangeo <belangeo@gmail.com>

    * Release tag: 0.7.6.
    - rev 1333

2015-07-24 belangeo <belangeo@gmail.com>

    * Added missing types to OscDataSend and OscDataReceive (char, blob, True, 
    False, None and MIDI packet).
    - rev 1332

2015-07-21 belangeo <belangeo@gmail.com>

    * Fixed Centroid output with silence as input.
    - rev 1330

2015-07-21 belangeo <belangeo@gmail.com>

    * Added new objet: RawMidi, a raw Midi handler.
    - rev 1329

2015-07-21 belangeo <belangeo@gmail.com>

    * Added pyoArgsAssert call in each object's methods.
    - rev 1320, 1325, 1327, 1328

2015-07-20 belangeo <belangeo@gmail.com>
