@@ -1,3 +1,7 @@
+2015-12-04 belangeo <belangeo@gmail.com>
+
+    * Added Juce PyoPlugin framework in the embedded folder.
+
 2015-10-12 belangeo <belangeo@gmail.com>
 
     * Final revision for version 0.7.7.
